# eternal-terminal-client

./: .gitignore  Cargo.toml  README.md  build.rs  crypto_vec_test.rs
.github/scripts/: verify-pe-version.ps1
.github/workflows/: ci.yml  release.yml
src/: backed.rs  client.rs  connection.rs  crypto.rs  host.rs  main.rs  packet.rs  proto.rs  ssh_setup.rs  terminal.rs
