[package]
name = "et"
version = "0.1.0"
edition = "2021"
description = "Eternal Terminal client for Windows (also Linux and macOS)"
license = "MIT"
readme = "README.md"
keywords = ["eternal-terminal", "et", "ssh", "remote", "terminal"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/AArnott/eternal-terminal-client"

[[bin]]
name = "et"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
thiserror = "2"
xsalsa20poly1305 = "0.9"
parking_lot = "0.12"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
hex = "0.4.3"
