[package]
name = "et"
version = "0.1.1"
edition = "2021"
description = "Eternal Terminal client — reconnectable remote shell"
license = "MIT"
readme = "README.md"
authors = ["Andrew Arnott"]
keywords = ["eternal-terminal", "et", "ssh", "remote", "terminal"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/AArnott/eternal-terminal-client"
homepage = "https://github.com/AArnott/eternal-terminal-client"
build = "build.rs"

[[bin]]
name = "et"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
thiserror = "2"
xsalsa20poly1305 = "0.9"
parking_lot = "0.12"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
hex = "0.4.3"
